Added server 3 without role to process events

--- a/src/main/resources/server-3.conf
+++ b/src/main/resources/server-3.conf
@@ -3,19 +3,19 @@ include "shared"
 server {
   http {
     host = "localhost"
-    port = 8081
+    port = 8083
   }
 }
 
 akka {
   cluster {
     seed-nodes = ["akka.tcp://appointmentSystem@127.0.0.1:2551"]
-    roles = ["event-processor"]
+    roles = [] // no additional roles so the EventProcessor can not run here
   }
   remote {
     netty.tcp {
       hostname = "127.0.0.1"
-      port = 2551
+      port = 2553
     }
   }
 }
