--- a/src/main/resources/shared.conf
+++ b/src/main/resources/shared.conf
@@ -28,6 +28,9 @@ akka {
     serialize-creators = off
     # Switch of the java Serialization
     allow-java-serialization = off
+    # https://doc.akka.io/docs/akka/2.5/remoting.html#disabling-the-java-serializer
+    # "enable some additional serializers that replace previous Java serialization of some internal messages"
+    enable-additional-serialization-bindings = on
   }
 
   persistence {
