Serialization of akka.Done

--- a/src/main/resources/shared.conf
+++ b/src/main/resources/shared.conf
@@ -21,6 +21,9 @@ akka {
     serialization-bindings {
       "nl.codestar.domain.AppointmentEvent" = avro-events
       "nl.codestar.domain.AppointmentCommand" = avro-commands
+      "akka.Done"                 = akka-misc
+      "akka.actor.Address"        = akka-misc
+      "akka.remote.UniqueAddress" = akka-misc
     }
     # 'serialize-messages' should ONLY be used for TESTING
     # Here it is used to force the serialization of all messages to test the disabling of the Java Serialization.
