--- a/src/main/resources/shared.conf
+++ b/src/main/resources/shared.conf
@@ -21,6 +21,10 @@ akka {
     serialization-bindings {
       "nl.codestar.domain.AppointmentEvent" = avro-events
       "nl.codestar.domain.AppointmentCommand" = avro-commands
+      # https://doc.akka.io/docs/akka/2.5/serialization.html#enable-additional-bindings
+      # Looking at this the combination of allow-java-serialization = off and
+      # enable-additional-serialization-bindings = on should be enough
+      # Still got errors, so ..... this worked
       "akka.Done"                 = akka-misc
       "akka.actor.Address"        = akka-misc
       "akka.remote.UniqueAddress" = akka-misc
