kamon try-out (not working yet sadly)

--- a/src/main/resources/shared.conf
+++ b/src/main/resources/shared.conf
@@ -96,3 +96,49 @@ cassandra-snapshot-store {
   contact-points = ["192.168.99.100"]
   log-queries = "on"
 }
+
+kamon {
+  // prometheus and zipkin are reporters
+  prometheus {
+  }
+  zipkin = {
+    host = "192.168.99.100"
+    port = 9411
+  }
+  // metric and subscriptions are for Akka http (https://github.com/kamon-io/kamon-akka-http)
+  metric {
+    filters {
+      trace.includes = [ "**" ]
+    }
+  }
+  subscriptions {
+    trace                = [ "**" ]
+    trace-segment        = [ "**" ]
+    akka-http-server     = [ "**" ]
+  }
+  
+  util.filters {
+    "akka.tracked-actor" {
+      includes = ["**"]
+    }
+
+    "akka.tracked-dispatcher" {
+      includes = ["**"]
+    }
+
+    "akka.traced-actor" {
+      includes = ["**"]
+    }
+
+    "test" {
+      includes = ["**"]
+    }
+  }
+  akka {
+    ask-pattern-timeout-warning = on
+  }
+//  datadog {
+//    hostname = "192.168.99.100"
+//    port = 8126
+//  }
+}
