--- a/src/main/resources/shared.conf
+++ b/src/main/resources/shared.conf
@@ -85,9 +85,11 @@ cassandra-journal {
   // The event adapters are needed for the tagging of the events!
   event-adapters {
     tagging = "nl.codestar.persistence.DomainObjectEventAdapter"
+    v1-upcast = "nl.codestar.persistence.AppointmentEventEnricher"
   }
   event-adapter-bindings {
     "nl.codestar.domain.AppointmentEvent" = tagging
+    "nl.codestar.domain.AppointmentEvent" = [tagging, event-upcast]
   }
 
 }
